fixed language menu overlay on mobile

--- a/assets/css/daily-myths.css
+++ b/assets/css/daily-myths.css
@@ -27,6 +27,9 @@ body{
 	display: block;
 	float: right;
 	font-size:80%;
+  position: absolute;
+  z-index: 1;
+  right: 0;
 }
 #header li{
 	display: inline;
@@ -36,6 +39,11 @@ body{
 	color:#fff;
 	text-transform: uppercase;
 	text-decoration:none;
+}
+
+#languages{
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 h1{
